小程序新的API0118

--- a/小程序.md
+++ b/小程序.md
@@ -4,3 +4,13 @@
 - 2.开放蓝牙、卡券、收货地址等接口能力
 - 3.新增'场景值'这个概念
 - 4.丰富原有接口的丰富
+  - 1.chooseAddress
+  - 2.wx.login 不需要授权，静默登录；登录状态有时效性；多久失效有微信服务器决定
+  - 3.wx.checkSession 可查看是否失效
+  - 4.wx.getUserInfo 
+    - 1.获取用户信息(明文,密文)
+    - 2.没有更新前，无论用户是否登录，都可以获取加密信息
+    - 3.新增一个参数withCredentials
+    - 4.为true时候，必须要求用户已经登录(调用过wx.login),且状态么有失效
+    - 5.为false时，不需要用户登录，但无法获取用户加密信息
+    - 6.unionID
